# Concordia

./: .gitignore  .tmp_api_curl.sh  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  temp_session_test.sh
concordia/: __init__.py  capsule.py
concordia/app/: deps.py  main.py
concordia/app/domain/: merkle.py  models.py  policy.py  schemas.py  sign.py
concordia/app/infra/: db.py  storage.py  tsa.py
concordia/app/routers/: audit.py  auth.py  debug.py  events.py  lab.py  metrics.py  sessions.py  view.py
concordia/app/services/: abac.py  keys.py  ledger.py  llm_assessment.py  telemetry.py
concordia/app/tasks/: metrics.py
concordia/app/templates/: audit_logs.html  debug_overview.html  lab_index.html  lab_story.html  timeline.html
concordia/tests/: test_app.py  test_events_signature.py  test_signing.py  test_telemetry.py
docs/: ARCHITECTURE_TWO_LANES.md  CONCEPTUAL_CRITIQUE.md  CONSENT_LAB.md  CONSENT_PHILOSOPHY.md  FUTURE_ROADMAP.md  INHERENT_THREATS.md  INVARIANTS.md  LEGACY_INFO_SHARING_SYSTEM.md  POSTER_DRAFT_JA.md  POSTER_STRATEGY.md  PROGRESS.md  SECURITY_TECHNOLOGIES.md  TERMINOLOGY.md  VALUE_PROPOSITION.md
scripts/: dialog_cli.py  doctor_summary.py  seal_session.py  seed_demo.py  verify_chain.py
